--- a/MTABS/mtabs_app/templates/login.html
+++ b/MTABS/mtabs_app/templates/login.html
@@ -28,6 +28,24 @@
             border-bottom-right-radius: 300px; /* Adjust the roundness */
         }
 
+        .button {
+        display: flex; 
+        padding: 10px 20px; 
+        font-size: 16px; 
+        color: white; 
+        background-color: #007bff; 
+        border: none; 
+        border-radius: 5px; 
+        text-align: center;
+        text-decoration: none; 
+        transition: background-color 0.3s; 
+}
+
+        .button:hover {
+            background-color: #0056b3; /* Changes background color on hover */
+        }
+
+
         .left-side img {
             width: 80%;
             max-width: 400px;
@@ -142,7 +160,8 @@
                         <a href="#" style="color: #6c6c6c;">Forgot password?</a>
                     </div>                                   
 
-                    <button type="submit">Sign in</button>
+                    <a href="{% url 'dashboard_page' %}" class="button">Sign in</a>
+
                 </form>
 
                 <div style="text-align: center; margin: 1.5rem 0;">OR LOGIN WITH</div>
