--- a/MTABS/mtabs_app/templates/dashboard.html
+++ b/MTABS/mtabs_app/templates/dashboard.html
@@ -189,7 +189,7 @@
             height: 400px; /* Set a fixed height */
             overflow-y: auto; /* Allow scrolling only within the schedule container */
         }
-
+        #pol gwapo
         .schedule h3 {
             margin-bottom: 15px;
             font-size: 18px;
