pol_adding the reminder

--- a/MTABS/mtabs_app/templates/CalendarMonth.html
+++ b/MTABS/mtabs_app/templates/CalendarMonth.html
@@ -305,7 +305,7 @@
       <li><a href="{% url 'dashboard_page' %}"><span>🏠</span> Dashboard</a></li>
       <li><span>📊</span> Statistics</li>
       <li><span>📅</span> Schedule Maker</li>
-      <li><span>🔔</span> Reminders</li>
+      <li><a href="{% url 'reminder_page' %}"><span>🔔</span> Reminders</a></li>
       <li><span>⚙️</span> Settings</li>
     </ul>
     <button>Logout</button>
