--- a/MTABS/mtabs_app/templates/dashboard.html
+++ b/MTABS/mtabs_app/templates/dashboard.html
@@ -226,7 +226,7 @@
             <li><span>🏠</span> Dashboard</li>
             <li><span>📊</span> Statistics</li>
             <li><a href="{% url 'calendar_page' %}"><span>📅</span> Schedule Maker</a></li>
-            <li><span>🔔</span> Reminders</li>
+            <li><a href="{% url 'reminder_page' %}"><span>🔔</span> Reminders</a></li>
             <li><span>⚙️</span> Settings</li>
         </ul>
         <button>Logout</button>
