--- a/MTABS/mtabs_app/templates/landing.html
+++ b/MTABS/mtabs_app/templates/landing.html
@@ -94,7 +94,7 @@
     <header>
         <nav>
             <a href="/" class="logo">
-                <img src="https://img.freepik.com/free-vector/bird-colorful-logo-gradient-vector_343694-1365.jpg?t=st=1729426095~exp=1729429695~hmac=69d8cdc1f90c290d4ba7de89bf524769b4638916f1d348faff0e7f7cccc21ab9&w=740" alt="MTabs Logo">
+                <img src="https://ideogram.ai/assets/image/lossless/response/Y0tq6NbfShW2cnOL8ELafg" alt="MTabs Logo">
             </a>
             <ul>
                 <li><a href="/">Home</a></li>
@@ -111,7 +111,7 @@
                 <a href="{% url 'login_page' %}" class="cta-button">Get Started</a>
             </div>
             <div class="hero-image">
-                <img src="https://img.freepik.com/free-vector/bird-colorful-logo-gradient-vector_343694-1365.jpg?t=st=1729426095~exp=1729429695~hmac=69d8cdc1f90c290d4ba7de89bf524769b4638916f1d348faff0e7f7cccc21ab9&w=740" alt="Schedule Image">
+                <img src="https://ideogram.ai/assets/image/lossless/response/Y0tq6NbfShW2cnOL8ELafg" alt="Schedule Image">
             </div>
         </section>
     </main>
