--- a/MTABS/mtabs_app/templates/login.html
+++ b/MTABS/mtabs_app/templates/login.html
@@ -140,7 +140,7 @@
     <div class="container">
         <!-- Left side with the logo -->
         <div class="left-side">
-            <img src="https://img.freepik.com/free-vector/bird-colorful-logo-gradient-vector_343694-1365.jpg?t=st=1729426095~exp=1729429695~hmac=69d8cdc1f90c290d4ba7de89bf524769b4638916f1d348faff0e7f7cccc21ab9&w=740" alt="MTabs Logo">
+            <img src="https://ideogram.ai/assets/image/lossless/response/Y0tq6NbfShW2cnOL8ELafg" alt="MTabs Logo">
         </div>
 
         <!-- Right side with the form -->
