--- a/MTABS/mtabs_app/templates/dashboard.html
+++ b/MTABS/mtabs_app/templates/dashboard.html
@@ -221,7 +221,7 @@
 
     <!-- Sidebar -->
     <div class="sidebar">
-        <img src="logo.png" alt="MTabs Logo">
+        <img src="https://ideogram.ai/assets/image/lossless/response/Y0tq6NbfShW2cnOL8ELafg" alt="MTabs Logo">
         <ul>
             <li><span>🏠</span> Dashboard</li>
             <li><span>📊</span> Statistics</li>
