--- a/MTABS/mtabs_app/templates/CalendarMonth.html
+++ b/MTABS/mtabs_app/templates/CalendarMonth.html
@@ -300,7 +300,7 @@
 
   <!-- Sidebar -->
   <div class="sidebar">
-    <img src="logo.png" alt="MTabs Logo">
+    <img src="https://ideogram.ai/assets/image/lossless/response/Y0tq6NbfShW2cnOL8ELafg" alt="MTabs Logo">
     <ul>
       <li><a href="{% url 'dashboard_page' %}"><span>🏠</span> Dashboard</a></li>
       <li><span>📊</span> Statistics</li>
