--- a/MTABS/mtabs_app/templates/CalendarMonth.html
+++ b/MTABS/mtabs_app/templates/CalendarMonth.html
@@ -300,10 +300,10 @@
     <img src="https://ideogram.ai/assets/image/lossless/response/Y0tq6NbfShW2cnOL8ELafg" alt="MTabs Logo">
     <ul>
       <li><a href="{% url 'dashboard_page' %}"><span>🏠</span> Dashboard</a></li>
-      <li><span>📊</span> Statistics</li>
-      <li><span>📅</span> Schedule Maker</li>
+      <li><a href="{% url 'statistics_page' %}"><span>📊</span> Statistics</a></li>
+      <li><a href="{% url 'calendar_page' %}"><span>📅</span> Schedule Maker</a></li>
       <li><a href="{% url 'reminder_page' %}"><span>🔔</span> Reminders</a></li>
-      <li><span>⚙️</span> Settings</li>
+      <li><a href="{% url 'settings_page' %}"><span>⚙️</span> Settings</a></li>
     </ul>
     <button>Logout</button>
   </div>
