--- a/MTABS/mtabs_app/templates/CalendarMonth.html
+++ b/MTABS/mtabs_app/templates/CalendarMonth.html
@@ -53,7 +53,9 @@
     }
 
     .sidebar li:hover {
-      background-color: #444;
+      background-color: rgba(255, 255, 255, 0.1);
+            border-radius: 8px;
+            padding-left: 10px;
     }
 
     .sidebar button {
